--- a/app-config.json
+++ b/app-config.json
@@ -9,7 +9,7 @@
 		"tripSearchable": true
 	},{
 		"id": "Voi",
-		"category": "Scooter2",
+		"category": "Scooter",
 		"bookable": true,
 		"mapSearchable": true,
 		"tripSearchable": true
