--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,6 @@ jobs:
           git config user.email "actions@github.com"
 
           # Commit and push the changes
-          git add app-config.json
+          git add docs/app-config.json
           git commit -m "Update app-config.json"
           git push https://owahlen:${APP_CONFIG_TOKEN}@github.com/owahlen/app-config-public.git HEAD:main
