--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "dist/validate.js",
   "scripts": {
     "lint": "eslint",
-    "build": "eslint && tsc",
-    "test": "eslint && tsc && node dist/validate.js",
+    "prebuild": "rimraf dist && npm run lint",
+    "build": "tsc",
+    "postbuild": "npm run test",
+    "test": "jest",
+    "start": "node dist/index.js",
     "clean": "rimraf dist node_modules"
   },
   "keywords": [],
@@ -19,12 +22,15 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.5",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
+    "jest": "^29.7.0",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1"
   }
